src/test/resources/success/basic/Problem3.scala
package success.basic

import forcedtodo.todo

class Problem3 {
  @todo("Something else", until = "2090-08-04")
  def foo = ???
}


