src/test/resources/fail/basic/Problem1.scala
package fail.basic

import forcedtodo.todo

@todo("Should be done by now", "1990-08-04")
class Problem1 {
}


